--- a/index.html
+++ b/index.html
@@ -29,15 +29,14 @@
 								</div>
 							</a>
 						</div>
-						<div class="col-xs-12 col-md-6 col-sm-6">
+						<div class="col-xs-12 col-md-6 col-sm-6 contacts">
 							<div class="pull-right clearfix">
-								<p class="phone">+ 7 (812) 606-60-77</p>
-								<p>+ 7 (812) 606-60-77</p>
-								<p class="address">+ 7 (812) 606-60-77</p>
+								<p class="phone">+7 (123) 456-78-90</p>
+								<p>+7 (123) 456-78-91</p>
+								<p class="add">г. Москва, ул. Ленина, 3</p>
 							</div>
 						</div>
 					</div>
-					
 				</div>
 				<section class="menu-inner hidden-xs">
 					<div class="container">
@@ -45,42 +44,30 @@
 							<div class="col-xs-12 col-md-4 col-sm-4">
 								<ul>
 									<li>
-										<a href="#">
-											text
-										</a>
+										<a href="#">Главная</a>
 									</li>
 									<li>
-										<a href="#">
-											text
-										</a>
+										<a href="#">Главная</a>
 									</li>
 									<li>
-										<a href="#">
-											text
-										</a>
+										<a href="#">Главная</a>
 									</li>
 								</ul>
 							</div>
 							<div class="col-xs-12 col-md-4 col-sm-4">
-								<a href="#" class="unical-btn">Забранировать номер</a>
+								<a href="#" class="unical-btn"></a>
 							</div>
 							<div class="col-xs-12 col-md-4 col-sm-4">
 								<div class="pull-right clearfix">
 									<ul>
 										<li>
-											<a href="#">
-												text
-											</a>
+											<a href="#">Главная</a>
 										</li>
 										<li>
-											<a href="#">
-												text
-											</a>
+											<a href="#">Главная</a>
 										</li>
 										<li>
-											<a href="#">
-												text
-											</a>
+											<a href="#">Главная</a>
 										</li>
 									</ul>
 								</div>
@@ -94,42 +81,44 @@
 					<div class="row">
 						<div class="col-xs-12 col-md-6 col-sm-6">
 							<div class="item">
-								<img src="">
-								<div class="inner text-center">
+								<img src="assets/img/item-1.jpg">
+								<div class="inner">
 									<p>
-										text
+										одноместный
 									</p>
-									<a href="#" class="btn btn-primary">button</a>
+									<a href="#" class="my-btn-white btn btn-primary">cмотреть</a>
 								</div>
 							</div>
 							<div class="item">
-								<img src="">
-								<div class="inner text-center">
+								<img src="assets/img/item-1.jpg">
+								<div class="inner">
 									<p>
-										text
+										двухместный
+стандарт
 									</p>
-									<a href="#" class="btn btn-primary">button</a>
+									<a href="#" class="my-btn-white btn btn-primary">cмотреть</a>
 								</div>
 							</div>
 						</div>
 						<div class="col-xs-12 col-md-6 col-sm-6">
 							<div class="pull-right clearfix">
 								<div class="item">
-								<img src="">
-								<div class="inner text-center">
+								<img src="assets/img/item-1.jpg">
+								<div class="inner">
 									<p>
-										text
+										одноместный
 									</p>
-									<a href="#" class="btn btn-primary">button</a>
+									<a href="#" class="my-btn-white btn btn-primary">cмотреть</a>
 								</div>
 							</div>
 							<div class="item">
-								<img src="">
-								<div class="inner text-center">
+								<img src="assets/img/item-1.jpg">
+								<div class="inner">
 									<p>
-										text
+										двухместный
+стандарт
 									</p>
-									<a href="#" class="btn btn-primary">button</a>
+									<a href="#" class="my-btn-white btn btn-primary">cмотреть</a>
 								</div>
 							</div>
 							</div>
@@ -215,19 +204,20 @@
 											<div class="radio">
 												<label>
 													<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" required/>
-													Option
+													Цена
+
 												</label>
 											</div>
 											<div class="radio">
 												<label>
 													<input type="radio" name="optionsRadios" id="optionsRadios2" value="option2" required/>
-													Option
+													Расположение
 												</label>
 											</div>
 											<div class="radio">
 												<label>
 													<input type="radio" name="optionsRadios" id="optionsRadios3" value="option3" required/>
-													Option
+													Питание
 												</label>
 											</div>
 										</div>
@@ -252,9 +242,7 @@
 								<div class="form-group">
 									<div class="row">
 										<div class="col-xs-12 col-sm-12 col-md-12">
-											<div class="pull-right">
-												<button type="submit" class="btn btn-default" value="opros" name="from">Отправить</button>
-											</div>
+											<button type="submit" class="btn btn-default" value="opros" name="from">Проголосовать</button>
 										</div>
 									</div>
 								</div>
