--- a/items.html
+++ b/items.html
@@ -270,88 +270,18 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-md-9 col-sm-9">
+						<div class="row">
+							<div class="col-xs-12 col-md-12 col-sm-12">
+								<h1>Тут будет заголовок то или иной страницы</h1>
+								<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+								<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+								<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+								<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+								<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+								<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+							</div>
+						</div>
 						
-						<div class="row">
-							<div class="col-xs-12 col-md-4 col-sm-4">
-								<div class="item">
-									<p><strong>Полупансион</strong></p>
-									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-								</div>
-							</div>
-							<div class="col-xs-12 col-md-4 col-sm-4">
-								<div class="item">
-									<p><strong>Полупансион</strong></p>
-									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-								</div>
-							</div>
-							<div class="col-xs-12 col-md-4 col-sm-4">
-								<div class="item">
-									<p><strong>Полупансион</strong></p>
-									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-md-12 col-sm-12">
-								<hr />
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<p><strong>Полупансион</strong></p>
-								<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-							</div>
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<p><strong>Полупансион</strong></p>
-								<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-md-12 col-sm-12">
-								<hr />
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<div class="item">
-									<h3>заголовок</h3>
-									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
-									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
-								</div>
-							</div>
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<div class="item">
-									<h3>заголовок</h3>
-									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
-									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-md-12 col-sm-12">
-								<hr />
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<div class="item">
-									<h3>заголовок</h3>
-									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
-									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
-								</div>
-							</div>
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<div class="item">
-									<h3>заголовок</h3>
-									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
-									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
