--- a/items.html
+++ b/items.html
@@ -344,7 +344,6 @@
 					<div class="col-xs-12 col-md-12 col-sm-12">
 						<div class="pull-right">
 							<p>Copyright &copy; 2015 Название компании</p>
-							<p><img src="assets/img/madeby.png"><a href="#">Создание сайта: Megagroup.ru</a></p>
 						</div>
 						<div class="clearfix"></div>
 						<div class="pull-right">
@@ -389,13 +388,13 @@
 						<p class="line-height">Дата заезда</p>
 					</div>
 					<div class="col-xs-12 col-md-3 col-sm-3">
-						<input type="date" name="" class="form-control my-input" />
+						<input type="text" data-item="date" name="" class="form-control my-input" />
 					</div>
 					<div class="col-xs-12 col-md-3 col-sm-3">
 						<p class="line-height">Дата отъезда</p>
 					</div>
 					<div class="col-xs-12 col-md-3 col-sm-3">
-						<input type="date" name="" class="form-control my-input" />
+						<input type="text" data-item="date" name="" class="form-control my-input" />
 					</div>
 				</div>
 			</div>
@@ -470,9 +469,12 @@
 </div>
 	<script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
 	<!--<link href='assets/css/fontello.css' rel='stylesheet' type='text/css'>-->
+	<link href='assets/css/bootstrap-datepicker3.min.css' rel='stylesheet' type='text/css'>
 	<link href='assets/css/owl.carousel.css' rel='stylesheet' type='text/css'>
 	<!--<link href='assets/css/lightbox.css' rel='stylesheet' type='text/css'>-->
 	
+	<script type="text/javascript" src="assets/js/bootstrap-datepicker.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap-datepicker.ru.min.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.maskedinput.js"></script>
 	<!--<script type="text/javascript" src="assets/js/lightbox.min.js"></script>-->
 	<script type="text/javascript" src="assets/js/form.js"></script>
