--- a/index.html
+++ b/index.html
@@ -297,35 +297,12 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<p><strong>Полупансион</strong></p>
-								<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-							</div>
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<p><strong>Полупансион</strong></p>
-								<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-							</div>
-						</div>
-						<div class="row">
 							<div class="col-xs-12 col-md-12 col-sm-12">
-								<hr />
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-xs-12 col-md-6 col-sm-6">
 								<div class="item">
-									<h3>заголовок</h3>
+									<p><strong>Полупансион</strong></p>
 									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
-									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
-								</div>
-							</div>
-							<div class="col-xs-12 col-md-6 col-sm-6">
-								<div class="item">
-									<h3>заголовок</h3>
-									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
-									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
-									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
+									<p></p>
+									<p>some text<p>
 								</div>
 							</div>
 						</div>
@@ -335,7 +312,50 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-12 col-md-6 col-sm-6">
+							<div class="col-xs-12 col-md-3 col-sm-3">
+								<div class="item">
+									<h3>заголовок</h3>
+									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
+									<p></p>
+									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
+								</div>
+							</div>
+							<div class="col-xs-12 col-md-3 col-sm-3">
+								<div class="item">
+									<h3>заголовок</h3>
+									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
+									<p></p>
+									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
+								</div>
+							</div>
+							<div class="col-xs-12 col-md-3 col-sm-3">
+								<div class="item">
+									<h3>заголовок</h3>
+									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
+									<p></p>
+									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
+								</div>
+							</div>
+							<div class="col-xs-12 col-md-3 col-sm-3">
+								<div class="item">
+									<h3>заголовок</h3>
+									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
+									<p></p>
+									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12 col-md-12 col-sm-12">
+								<hr />
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12 col-md-3 col-sm-3">
 								<div class="item">
 									<h3>заголовок</h3>
 									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
@@ -343,13 +363,34 @@
 									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
 								</div>
 							</div>
-							<div class="col-xs-12 col-md-6 col-sm-6">
+							<div class="col-xs-12 col-md-3 col-sm-3">
 								<div class="item">
 									<h3>заголовок</h3>
 									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
 									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
 									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
 								</div>
+							</div>
+							<div class="col-xs-12 col-md-3 col-sm-3">
+								<div class="item">
+									<h3>заголовок</h3>
+									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
+									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
+								</div>
+							</div>
+							<div class="col-xs-12 col-md-3 col-sm-3">
+								<div class="item">
+									<h3>заголовок</h3>
+									<a href="#"><img src="assets/img/item-2.jpg" class="full-width"></a>
+									<p>Здесь будет располагаться текст выбранной страницы из меню. Так же тут можно будет поместить картинки.</p>
+									<a href="#" class="my-btn-blue btn btn-primary">заголовок</a>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12 col-md-12 col-sm-12">
+								<hr />
 							</div>
 						</div>
 					</div>
@@ -435,6 +476,26 @@
 			Быстрое бронирование
 		</h4>
 		<form class="form-send" data-toggle="validator" action="hendler.php" method="post" role="form" data-form="send">
+			<div class="form-group">
+				<div class="row">
+					<div class="col-xs-12 col-md-12 col-sm-12">
+						<p>Ваше имя</p>
+					</div>
+					<div class="col-xs-12 col-md-12 col-sm-12">
+						<input type="text" name="user" class="form-control my-input" />
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="row">
+					<div class="col-xs-12 col-md-12 col-sm-12">
+						<p>Ваш телефон</p>
+					</div>
+					<div class="col-xs-12 col-md-12 col-sm-12">
+						<input type="text" name="phone" class="form-control my-input" />
+					</div>
+				</div>
+			</div>
 			<div class="form-group">
 				<div class="row">
 					<div class="col-xs-12">
