--- a/items.html
+++ b/items.html
@@ -367,6 +367,26 @@
 		<form class="form-send" data-toggle="validator" action="hendler.php" method="post" role="form" data-form="send">
 			<div class="form-group">
 				<div class="row">
+					<div class="col-xs-12 col-md-12 col-sm-12">
+						<p>Ваше имя</p>
+					</div>
+					<div class="col-xs-12 col-md-12 col-sm-12">
+						<input type="text" name="user" class="form-control my-input" />
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="row">
+					<div class="col-xs-12 col-md-12 col-sm-12">
+						<p>Ваш телефон</p>
+					</div>
+					<div class="col-xs-12 col-md-12 col-sm-12">
+						<input type="text" name="phone" class="form-control my-input" />
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="row">
 					<div class="col-xs-12">
 						<p>Номер</p>
 					</div>
